@@ -71,38 +71,6 @@ namespace MiniSqlQuery.Core
 		}
 
 		/// <summary>
-		/// Upgrades the old definitions to a <see cref="DbConnectionDefinitionList"/>.
-		/// </summary>
-		/// <param name="oldDefinitions">The old definitions.</param>
-		/// <param name="defaultName">The default name to use.</param>
-		/// <returns>An instance of <see cref="DbConnectionDefinitionList"/>.</returns>
-		public static DbConnectionDefinitionList Upgrade(ConnectionDefinition[] oldDefinitions, string defaultName)
-		{
-			DbConnectionDefinitionList definitionList = new DbConnectionDefinitionList();
-			List<DbConnectionDefinition> newDefList = new List<DbConnectionDefinition>();
-
-			definitionList.DefaultName = defaultName;
-			foreach (ConnectionDefinition oldConDef in oldDefinitions)
-			{
-				DbConnectionDefinition dbConnectionDefinition = new DbConnectionDefinition
-				                                                {
-				                                                	ConnectionString = oldConDef.ConnectionString,
-				                                                	Name = oldConDef.Name,
-				                                                	ProviderName = oldConDef.ProviderName,
-				                                                };
-				newDefList.Add(dbConnectionDefinition);
-			}
-			definitionList.Definitions = newDefList.ToArray();
-
-			if (definitionList.DefaultName == null && definitionList.Definitions.Length > 0)
-			{
-				definitionList.DefaultName = definitionList.Definitions[0].Name;
-			}
-
-			return definitionList;
-		}
-
-		/// <summary>
 		/// Adds the definition from the list.
 		/// </summary>
 		/// <param name="connectionDefinition">The connection definition.</param>
