@@ -92,28 +92,5 @@ namespace MiniSqlQuery.Tests
 			Assert.That(xml, Text.Contains("<ConnectionString>cs2</ConnectionString>"));
 			Assert.That(xml, Text.Contains("<ProviderName>p2</ProviderName>"));
 		}
-
-		[Test]
-		public void Can_upgrade_from_old_style()
-		{
-			ConnectionDefinition[] connDefs = ConnectionDefinition.Parse(new[]
-			                                                             {
-			                                                             	"Connection1^sql^Server=.; Database=master; Integrated Security=SSPI",
-			                                                             	"Connection2^oracle^Server=.; Database=fred; user=bob; password=p"
-			                                                             });
-
-			DbConnectionDefinitionList definitionList = DbConnectionDefinitionList.Upgrade(connDefs, "newDefault");
-
-			Assert.That(definitionList.DefaultName, Is.EqualTo("newDefault"));
-			Assert.That(definitionList.Definitions.LongLength, Is.EqualTo(connDefs.Length));
-
-			Assert.That(definitionList.Definitions[0].ConnectionString, Is.EqualTo("Server=.; Database=master; Integrated Security=SSPI"));
-			Assert.That(definitionList.Definitions[0].Name, Is.EqualTo("Connection1"));
-			Assert.That(definitionList.Definitions[0].ProviderName, Is.EqualTo("sql"));
-
-			Assert.That(definitionList.Definitions[1].ConnectionString, Is.EqualTo("Server=.; Database=fred; user=bob; password=p"));
-			Assert.That(definitionList.Definitions[1].Name, Is.EqualTo("Connection2"));
-			Assert.That(definitionList.Definitions[1].ProviderName, Is.EqualTo("oracle"));
-		}
 	}
 }
